--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,3 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 </resources>
+<color name="colorPrimary">#6A1B9A</color>
+<color name="colorPrimaryDark">#4A148C</color>
+<color name="colorAccent">#AA00FF</color>
