LinuxLator full branding - name, package, purple theme

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,3 +4,6 @@
 <color name="colorPrimary">#6A1B9A</color>
 <color name="colorPrimaryDark">#4A148C</color>
 <color name="colorAccent">#AA00FF</color>
+<color name="colorPrimary">#6A1B9A</color>
+<color name="colorPrimaryDark">#4A148C</color>
+<color name="colorAccent">#AA00FF</color>
